--- a/index.html
+++ b/index.html
@@ -9,33 +9,59 @@
     <table>
       <tbody id="container"></tbody>
     </table>
+    <button id="prev" onclick="prevPage()">Previous</button>
+    <button id="next" onclick="nextPage()">Next</button>
+
     <script>
+      var previousLink = null
+      var nextLink = null
       async function tickets() {
-        const container = document.getElementById('container')
         const response = await fetch('/tickets')
-        const {tickets} = await response.json()
-        // console.log(tickets);
-        // tickets.forEach(element => {
-        //   const ticketRow = document.createElement('tr')
-        //   const ticketData = document.createElement('td')
-        //   ticketName = element.name 
-        //   ticketRow.appendChild(ticketName)
-        //   ticketRow.textContent = JSON.stringify(element, null, 4)
-        //   container.appendChild(ticketRow)
-        //   // console.log(element);
-        // });
-        var tr = "<tr>"
+        const {tickets, links} = await response.json()
+        previousLink = links.prev
+        nextLink = links.next
+        displayTickets(tickets)
+        console.log(tickets);
+      }
 
-        for (var i = 0; i < tickets.length; i++) {
-          // container.appendChild(tickets[i].description)
-          console.log(tickets);
-          tr += "<td>" + tickets[i].submitter_id + "</td>" + "<td>" + tickets[i].Subject + "</td>" + "<td>" + tickets[i].status + "</td>" + "<td>" + tickets[i].priority + "</td>" + "</tr>"
-          // tr += "<td>" + tickets[i].submitter_id + tickets[i].Subject + tickets[i].status + tickets[i].priority + "</td>" + "</tr>"
+      function displayTickets(tickets) {
+        const container = document.getElementById('container')
+        container.innerHTML = ""
+        tickets.forEach(element => {
+          var tr = "<tr>" + "<td>" + element.id + "</td>" +"<td>"  + element.submitter_id + "</td>" + "<td>" + element.Subject + "</td>" + "<td>" + element.status + "</td>" + "<td>" + element.priority + "</td>" + "</tr>"
           container.innerHTML += tr;
-        }
-
-
+        })
       } 
+
+      async function prevPage() {
+        try{
+          const response = await fetch('/prevPage?' + new URLSearchParams({
+            url: previousLink,
+           }))
+          const {tickets, links} = await response.json()
+          previousLink = links.prev
+          nextLink = links.next
+          displayTickets(tickets)
+        }
+        catch (error) {
+          console.log(error)
+        }
+      }
+
+      async function nextPage() {
+        try{
+          const response = await fetch('/nextPage?' + new URLSearchParams({
+            url: nextLink,
+           }))
+          const {tickets, links} = await response.json()
+          previousLink = links.prev
+          nextLink = links.next
+          displayTickets(tickets)
+        }
+        catch (error) {
+          console.log(error)
+        }
+      }
       window.addEventListener('load', tickets)
     </script>
   </body>
